Added final screens

--- a/CommemorativeClock.html
+++ b/CommemorativeClock.html
@@ -171,13 +171,32 @@
 						<a href="#menu" class="menuToggle"><span>Menu</span></a>
 						<div id="menu">
 							<ul>
-								<li><a href="index.html" class="scrolly">Home</a></li>
+								<li><a href="index.html#banner" class="scrolly">Home</a></li>
 								<li><a href="index.html#rwm" class="scrolly">Right Worshipful Master</a></li>
 								<li><a href="index.html#officeBearers" class="scrolly">Office Bearers</a></li>
 								<li><a href="index.html#syllabus" class="scrolly">Syllabus</a></li>
-								<li><a href="index.html#contact" class="scrolly">Get In Touch</a></li>
-								<li><a href="index.html#social" class="scrolly">Social</a></li>
+								<li><a href="index.html#visitations" class="scrolly">Visitations</a></li>
 								<li><a href="PastMasters.html">Past Masters</a></li>
+								<li><a href="History.html">History</a>
+									<ul style="padding-left: 20px;">
+										<li><a href="CommemorativeClock.html">Commemorative Clock</a></li>
+										<li><a href="EdwardJohnRichards.html">Edward John Richards</a></li>
+									</ul>
+								</li>
+								<li><a>Events</a>
+									<ul style="padding-left: 20px;">
+										<li><a href="SponsoredWalk.html">Sponsored Walk</a></li>
+										<li><a href="StevelyCup.html">Stevely Cup</a></li>
+										<li><a href="GrandXmasDraw.html">Grand Xmas Draw</a></li>
+									</ul>
+								</li>
+								<li><a href="Gallery.html">Gallery</a></li>
+								<li><a href="index.html#contact" class="scrolly">Contact Us</a>
+									<ul style="padding-left: 20px;">
+										<li><a href="PrivacyNotice.html">Privacy Notice</a></li>
+									</ul>
+								</li>
+								<li><a href="index.html#links" class="scrolly">Links</a></li>
 							</ul>
 						</div>
 					</li>
