--- a/Gallery.html
+++ b/Gallery.html
@@ -267,94 +267,40 @@
 			</nav>
 		</header>
 
-		<!-- Sponsored Walk -->
-		<section id="sponsoredWalk" class="wrapper style2">
-			<div class="content" style="padding-left: 10px;">
-				<table>
-					<tr>
-						<td>
-							<h2>Sponsored Walk 2024</h2>
-							<img src="images/Walk2024_1.jpg" alt="" />
-							<img src="images/Walk2024_2.jpg" alt="" />
-							<p>On Saturday 27th July 2024, Lodge Eastmuir No.1126 once again had their Annual Sponsored walk in aid of the Lodges Nominated Charity.</p>
-							<p>
-								This year the charity is Caledonia School LCR Unit in Baillieston. The Lodge have supported such schools locally over the last few years and were happy to do so once again.
-							</p>
-							<p>
-								Members and friends walked from Lodge Eastmuir's premises to Lodge St.Brydes No.579 in Uddingston, after a small break and refreshment the brethren 
-								and ladies made their way back to the Lodge via Lodge Robert Burns No.440. 
-							</p>
-							<p>The lodge has a close contact with the school as the son of one of our members attends there.</p>
-							<p>
-								On Thursday 21st November the IPM Stuart McManus was pleased to hand over a cheque for £4,100 to the Head Mistress of the School and she expressed her grateful thanks.
-							</p>
-							<p>
-								She commented that the donation would be put to good use and that she would write to us outlining how the money was spent to benefit the children.
-							</p>
-						</td>
-					</tr>
-					<tr>
-						<td>
-							<h2>Sponsored Walk 2023</h2>
-							<img src="images/Walk2023.jpg" alt="" />
-							<p>On Saturday 20th May 2023, Lodge Eastmuir No.1126 had their Annual Sponsored walk in aid of the Lodges Nominated Charity.</p>
-							<p>
-								This year the charity is Eastmuir School in Barlanark. The school is for kids that have challenging and special needs. The Lodge 
-								have supported the school over many years and this year is no different.
-							</p>
-							<p>
-								On the day 20 people made up of brethren, wives and friends took to the pavement and walked from Lodge Eastmuir premises to Lodge St.Brydes 
-								No.579 in Uddingston, after a small break and refreshment the brethren and ladies made their way back to the Lodge via Lodge Robert Burns 
-								No.440. Lodge Robert Burns kindly put on some refreshments and a bite to eat for all.
-							</p>
-							<p>
-								After all the monies were received and counted the Master Brother Stuart McManus was delighted to hand over a Cheque for £3,020 to the Fiona Welsh 
-								Deputy Head of the school.
-							</p>
-						</td>
-					</tr>
-					<tr>
-						<td>
-							<h2>Sponsored Walk 2022</h2>
-							<img src="images/Walk2022.jpg" alt="" />
-							<p>
-								This year our Sponsored Walk on behalf of SANDS raised the magnificant sum of £4,375. A big thanks to everyone who supported this great cause. The picture 
-								shows the cheque being presented to our RWM David Wheatley by our Senior Deacon Darren Bambridge.
-							</p>
-						</td>
-					</tr>
-					<tr>
-						<td>
-							<h2>Sponsored Walk 2019</h2>
-							<img src="images/Walk2019_1.jpg" alt="" />
-							<img src="images/Walk2019_2.jpg" alt="" />
-							<p>The final amount raised this year for Aultmore School was a fantastic £3.050.</p>
-							<p>The RWM brother Ian Haldane is pictured presenting the cheque to the school along with some of the brethren.</p>
-						</td>
-					</tr>
-					<tr>
-						<td>
-							<h2>Sponsored Walk 2019</h2>
-							<img src="images/Walk2019_3.jpg" alt="" />
-							<p>
-								Our charity fund raising this year took place on Saturday 18th May from our Lodge in Shettleston to Lodge St Bryde (Uddingston) on behalf 
-								of Aultmore Primary School in Easterhouse  who provide an education service for Autistic Children.
-							</p>
-							<p>The money is still being collected and the amount raised will be published soon.</p>
-							<p>Some of the walkers are shown in the photograph below. The RWM would like to thank all the walkers and those who donated money.​​</p>
-						</td>
-					</tr>
-					<tr>
-						<td>
-							<h2>Sponsored Walk 2018</h2>
-							<img src="images/Walk2018.jpg" alt="" />
-							<p>Our Annual Sponsored Walk from Shettleston to Uddingston (and back again if you can make it), will take place on Saturday 12th May. </p>
-							<p>This year it is in aid of Alzheimer Scotland who provide a wide range of specialist services for people with Dementia and their carers.</p>
-							<p>Presentation of the cheque for £3,800 to Alzeimers Scotland. Along with our RWM were the RWPGM James Peddie and WSPGM William Newlands.</p>
-						</td>
-					</tr>
-				</table>
-			</div>
+		<!-- Gallery -->
+		<section id="gallery" class="wrapper alt style2">
+			<section id="kingsPhotograph" class="spotlight">
+				<div class="image"><img src="images/Gallery/KingsPhotograph.jpg" alt=""/></div>
+				<div class="content">
+					<h2>Unveiling Of Official King's Photopgraph</h2>
+					<p>The RWM David Jones unveils the 'Official' photograph of King Charles III.</p>
+					<p>On his right Iain McAuslan RWM Lodge Scotia No.178 and on his left Jonathan Boyle RWM The Caledonian Railway Lodge No. 354.</p>
+					<p>Thursday 15th February 2024</p>
+				</div>
+			</section>
+			<section id="installation2023" class="spotlight">
+				<div class="image"><img src="images/Gallery/Installation2023.jpg" alt=""/></div>
+				<div class="content">
+					<h2>Installation 2023</h2>
+					<p>15th December</p>
+					<p>RWM David Jones</p>
+					<p>With the Installing Masters Bro. Edward Woods PM, Bro. IanHaldane PM and RWPGM of Glasgow Bro. Andrew Mushet</p>
+				</div>
+			</section>
+			<section id="installation2022" class="spotlight">
+				<div class="image"><img src="images/Gallery/Installation2022.jpg" alt=""/></div>
+				<div class="content">
+					<h2>Installation 2022</h2>
+					<p>16th December</p>
+					<p>RWM Stuart McManus</p>
+				</div>
+			</section>
+			<section id="sponsoredWalkDonation" class="spotlight">
+				<div class="image"><img src="images/Gallery/SponsoredWalkDonation.jpg" alt=""/></div>
+				<div class="content">
+					<p>Presentation of £1600 Sponsored Walk Cheque to Eastmuir Special Needs School - 3rd November 2016</p>
+				</div>
+			</section>
 		</section>
 
 		<!-- Footer -->
