--- a/index.html
+++ b/index.html
@@ -190,6 +190,13 @@
 										<li><a href="GrandXmasDraw.html">Grand Xmas Draw</a></li>
 									</ul>
 								</li>
+								<li><a href="Gallery.html">Gallery</a></li>
+								<li><a href="#contact" class="scrolly">Contact Us</a>
+									<ul style="padding-left: 20px;">
+										<li><a href="PrivacyNotice.html">Privacy Notice</a></li>
+									</ul>
+								</li>
+								<li><a href="#links" class="scrolly">Links</a></li>
 							</ul>
 						</div>
 					</li>
@@ -205,7 +212,7 @@
 				<p>All Brethren in Good Standing are welcome to join us at our regular meetings.<br />
 				</p>
 				<ul class="actions special">
-					<li><a href="#contact" class="button primary scrolly">Get in touch</a></li>
+					<li><a href="#contact" class="button primary scrolly">Contact Us</a></li>
 				</ul>
 			</div>
 			<a href="#rwm" class="more scrolly">More</a>
@@ -497,36 +504,83 @@
 
 		<!-- contact -->
 		<section id="contact" class="wrapper style3 special">
-			<h2>Get in touch with us</h2>
-			<h4>Our Office</h4>
-			<div>5 Wheatley Place</div>
-			<div>Glasgow</div>			
-			<div style="margin-bottom: 10px">G32 7JQ</div>
-			<div>Telephone: 020 8798 3311</div>
-			<div style="margin-bottom: 10px">Email: sales@mybathroomglasgow.co.uk</div>
-			<form action="mailto:sales@mybathroomglasgow.co.uk?&amp;subject=General%20Enquiry" method="post" enctype="text/plain">
+			<h2>Contact Us</h2>
+			<h4>Join us at our regular meetings! First and Third Thursday's, Sept to May.</h4>
+			<P>Our hall is available for Public Hire, Birthday Parties, Funerals, Christenings, Holy Communions etc. (no 18th or 21st Birthday Parties).</p>
+			<img src="images/Building.jpg" alt="" />
+			<div>Eastmuir Masonic Lodge</div>
+			<div>1543 Shettleston Road</div>			
+			<div>Glasgow</div>
+			<div>G32 8AS</div>
+			<div>United Kingdom</div>
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2239.6732000239367!2d-4.158309422826503!3d55.85098558442414!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4888419c45171997%3A0xc1b9abe733edca78!2sEastmuir%20Masonic%20Hall!5e0!3m2!1sen!2suk!4v1734444769480!5m2!1sen!2suk" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+			<br/>
+			<div>Telephone: +44 1417781959</div>
+			<div>Webmaster: eastmuirsecy1126@gmail.com</div>
+			<br/>
+			<form action="mailto:eastmuirsecy1126@gmail.com?&amp;subject=General%20Enquiry" method="post" enctype="text/plain">
 				<input type="submit" value="Send an email enquiry">
 			</form>
-			<a class="button" href="tel:02087983311">Call us now</a>
 		</section>
 
-		<section id="social" class="wrapper style1">
-			<div class="inner">
-				<header>
-					<h2>Social media latest</h2>
-				</header>
-				<div class='embedsocial-instagram' data-ref="9773c1d2080cf7244e13000dcd77e82c274ec42b"></div>
-					<script>(function(d, s, id){var js; if (d.getElementById(id)) {return;} js = d.createElement(s); js.id = id; js.src = "https://embedsocial.com/embedscript/in.js"; d.getElementsByTagName("head")[0].appendChild(js);}(document, "script", "EmbedSocialInstagramScript"));</script>
-				<div class='embedsocial-album' data-ref="ad897ab9a560a462a89282dd02696d471915003f"></div><script>(function(d, s, id){var js; if (d.getElementById(id)) {return;} js = d.createElement(s); js.id = id; js.src = "https://embedsocial.com/embedscript/ei.js"; d.getElementsByTagName("head")[0].appendChild(js);}(document, "script", "EmbedSocialScript"));</script>
-			</div>
+		<section id="links" class="wrapper style1 special">
+			<h2>Links</h2>
+			<table style="text-align: center;">
+				<tr style="vertical-align: middle;">
+					<td style="vertical-align: middle;"><img src="images/GrandLodge.png" alt=""/></td>
+					<td style="vertical-align: middle;">Grand Lodge of Scotland</td>
+					<td style="vertical-align: middle;"><a href="http://www.grandlodgescotland.com/">http://www.grandlodgescotland.com/</a></td>
+				</tr>
+				<tr>
+					<td style="vertical-align: middle;"><img src="images/ProvincialGrandLodge.jpg" alt=""/></td>
+					<td style="vertical-align: middle;">Provincial Grand Lodge of Glasgow</td>
+					<td style="vertical-align: middle;"><a href="http://www.pglglasgow.org.uk/">http://www.pglglasgow.org.uk/</a></td>
+				</tr>
+				<tr>
+					<td style="vertical-align: middle;"></td>
+					<td style="vertical-align: middle;">Lodge Scotia Glasgow No. 178</td>
+					<td style="vertical-align: middle;"><a href="http://www.lodgescotia178.co.uk/">http://www.lodgescotia178.co.uk/</a></td>
+				</tr>
+				<tr>
+					<td style="vertical-align: middle;"></td>
+					<td style="vertical-align: middle;">Lodge Robert Burns No. 440</td>
+					<td style="vertical-align: middle;"><a href="http://www.lrb440.co.uk/">http://www.lrb440.co.uk/</a></td>
+				</tr>
+				<tr>
+					<td style="vertical-align: middle;"></td>
+					<td style="vertical-align: middle;">Lodge St, Bryde No. 579</td>
+					<td style="vertical-align: middle;"><a href="http://www.stbryde579.co.uk/">http://www.stbryde579.co.uk/</a></td>
+				</tr>
+				<tr>
+					<td style="vertical-align: middle;"></td>
+					<td style="vertical-align: middle;">Lodge Blantyre Kilwinning 557</td>
+					<td style="vertical-align: middle;"><a href="lodgeblantyrekilwinning557.com/">lodgeblantyrekilwinning557.com/</a></td>
+				</tr>
+				<tr>
+					<td style="vertical-align: middle;"></td>
+					<td style="vertical-align: middle;">Caledonia Railway Lodge No. 354</td>
+					<td style="vertical-align: middle;"><a href="s552960452.websitehome.co.uk/">s552960452.websitehome.co.uk/</a></td>
+				</tr>
+				<tr>
+					<td style="vertical-align: middle;"></td>
+					<td style="vertical-align: middle;">Unity Lodge Brampton No. 710 (Canada)</td>
+					<td style="vertical-align: middle;"><a href="unitylodge.ca/main/">unitylodge.ca/main/</a></td>
+				</tr>
+				<tr>
+					<td style="vertical-align: middle;"></td>
+					<td style="vertical-align: middle;">Provincial Grand Royal Arch	Chapter of Glasgow</td>
+					<td style="vertical-align: middle;"><a href="pgracglasgow.co.uk/">pgracglasgow.co.uk/</a></td>
+				</tr>
+				<tr>
+					<td style="vertical-align: middle;"></td>
+					<td style="vertical-align: middle;">Great Priory of Scotland</td>
+					<td style="vertical-align: middle;"><a href="greatprioryofscotland.co.uk">greatprioryofscotland.co.uk</a></td>
+				</tr>
+			</table>
 		</section>
 
 		<!-- Footer -->
 		<footer id="footer">
-			<ul class="icons">
-				<li><a href="https://www.facebook.com/stephen.richmond.33" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-				<li><a href="https://www.instagram.com/srichmond89/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-			</ul>
 			<ul class="copyright">
 				<li>&copy; Eastmuir Masonic Lodge</li>
 				<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
