--- a/PrivacyNotice.html
+++ b/PrivacyNotice.html
@@ -146,69 +146,6 @@
 				.hover-shadow:hover {
 				  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 				}
-
-				* {box-sizing: border-box;}
-				body {font-family: Verdana, sans-serif;}
-				.mySlides {display: none;}
-				img {vertical-align: middle;}
-
-				/* Slideshow container */
-				.slideshow-container {
-				max-width: 1000px;
-				position: relative;
-				margin: auto;
-				}
-
-				/* Caption text */
-				.text {
-				color: #f2f2f2;
-				font-size: 15px;
-				padding: 8px 12px;
-				position: absolute;
-				bottom: 8px;
-				width: 100%;
-				text-align: center;
-				}
-
-				/* Number text (1/3 etc) */
-				.numbertext {
-				color: #f2f2f2;
-				font-size: 12px;
-				padding: 8px 12px;
-				position: absolute;
-				top: 0;
-				}
-
-				/* The dots/bullets/indicators */
-				.dot {
-				height: 15px;
-				width: 15px;
-				margin: 0 2px;
-				background-color: #bbb;
-				border-radius: 50%;
-				display: inline-block;
-				transition: background-color 0.6s ease;
-				}
-
-				.active {
-				background-color: #717171;
-				}
-
-				/* Fading animation */
-				.fade {
-				animation-name: fade;
-				animation-duration: 1.5s;
-				}
-
-				@keyframes fade {
-				from {opacity: .4} 
-				to {opacity: 1}
-				}
-
-				/* On smaller screens, decrease text size */
-				@media only screen and (max-width: 300px) {
-				.text {font-size: 11px}
-				}
 </style>
 
 <head>
@@ -267,93 +204,74 @@
 			</nav>
 		</header>
 
-		<!-- Sponsored Walk -->
-		<section id="sponsoredWalk" class="wrapper style2">
+		<!-- Privacy Notice -->
+		<section id="privacyNotice" class="wrapper style2">			
 			<div class="content" style="padding-left: 10px;">
-				<table>
-					<tr>
-						<td>
-							<h2>Sponsored Walk 2024</h2>
-							<img src="images/Walk2024_1.jpg" alt="" />
-							<img src="images/Walk2024_2.jpg" alt="" />
-							<p>On Saturday 27th July 2024, Lodge Eastmuir No.1126 once again had their Annual Sponsored walk in aid of the Lodges Nominated Charity.</p>
-							<p>
-								This year the charity is Caledonia School LCR Unit in Baillieston. The Lodge have supported such schools locally over the last few years and were happy to do so once again.
-							</p>
-							<p>
-								Members and friends walked from Lodge Eastmuir's premises to Lodge St.Brydes No.579 in Uddingston, after a small break and refreshment the brethren 
-								and ladies made their way back to the Lodge via Lodge Robert Burns No.440. 
-							</p>
-							<p>The lodge has a close contact with the school as the son of one of our members attends there.</p>
-							<p>
-								On Thursday 21st November the IPM Stuart McManus was pleased to hand over a cheque for £4,100 to the Head Mistress of the School and she expressed her grateful thanks.
-							</p>
-							<p>
-								She commented that the donation would be put to good use and that she would write to us outlining how the money was spent to benefit the children.
-							</p>
-						</td>
-					</tr>
-					<tr>
-						<td>
-							<h2>Sponsored Walk 2023</h2>
-							<img src="images/Walk2023.jpg" alt="" />
-							<p>On Saturday 20th May 2023, Lodge Eastmuir No.1126 had their Annual Sponsored walk in aid of the Lodges Nominated Charity.</p>
-							<p>
-								This year the charity is Eastmuir School in Barlanark. The school is for kids that have challenging and special needs. The Lodge 
-								have supported the school over many years and this year is no different.
-							</p>
-							<p>
-								On the day 20 people made up of brethren, wives and friends took to the pavement and walked from Lodge Eastmuir premises to Lodge St.Brydes 
-								No.579 in Uddingston, after a small break and refreshment the brethren and ladies made their way back to the Lodge via Lodge Robert Burns 
-								No.440. Lodge Robert Burns kindly put on some refreshments and a bite to eat for all.
-							</p>
-							<p>
-								After all the monies were received and counted the Master Brother Stuart McManus was delighted to hand over a Cheque for £3,020 to the Fiona Welsh 
-								Deputy Head of the school.
-							</p>
-						</td>
-					</tr>
-					<tr>
-						<td>
-							<h2>Sponsored Walk 2022</h2>
-							<img src="images/Walk2022.jpg" alt="" />
-							<p>
-								This year our Sponsored Walk on behalf of SANDS raised the magnificant sum of £4,375. A big thanks to everyone who supported this great cause. The picture 
-								shows the cheque being presented to our RWM David Wheatley by our Senior Deacon Darren Bambridge.
-							</p>
-						</td>
-					</tr>
-					<tr>
-						<td>
-							<h2>Sponsored Walk 2019</h2>
-							<img src="images/Walk2019_1.jpg" alt="" />
-							<img src="images/Walk2019_2.jpg" alt="" />
-							<p>The final amount raised this year for Aultmore School was a fantastic £3.050.</p>
-							<p>The RWM brother Ian Haldane is pictured presenting the cheque to the school along with some of the brethren.</p>
-						</td>
-					</tr>
-					<tr>
-						<td>
-							<h2>Sponsored Walk 2019</h2>
-							<img src="images/Walk2019_3.jpg" alt="" />
-							<p>
-								Our charity fund raising this year took place on Saturday 18th May from our Lodge in Shettleston to Lodge St Bryde (Uddingston) on behalf 
-								of Aultmore Primary School in Easterhouse  who provide an education service for Autistic Children.
-							</p>
-							<p>The money is still being collected and the amount raised will be published soon.</p>
-							<p>Some of the walkers are shown in the photograph below. The RWM would like to thank all the walkers and those who donated money.​​</p>
-						</td>
-					</tr>
-					<tr>
-						<td>
-							<h2>Sponsored Walk 2018</h2>
-							<img src="images/Walk2018.jpg" alt="" />
-							<p>Our Annual Sponsored Walk from Shettleston to Uddingston (and back again if you can make it), will take place on Saturday 12th May. </p>
-							<p>This year it is in aid of Alzheimer Scotland who provide a wide range of specialist services for people with Dementia and their carers.</p>
-							<p>Presentation of the cheque for £3,800 to Alzeimers Scotland. Along with our RWM were the RWPGM James Peddie and WSPGM William Newlands.</p>
-						</td>
-					</tr>
-				</table>
+				<h2>Privacy Notice</h2>
+                <h4>Who are we?</h4>
+				<p>
+					We are Lodge Eastmuir a Lodge of Freemasons in the Province of Glasgow.  We operate under the auspices of the Provincial Grand Lodge of Glasgow 
+					and the Grand Lodge of Scotland. Lodge Eastmuir is committed to maintaining the trust and confidence of our members and visitors to our website.  
+					In particular, we do not sell, rent or trade email lists with any other company for marketing purposes. This Privacy Policy highlights why we 
+					collect personal information, how we use it, the limited conditions under which we may disclose it to others and how we keep it secure.
+				</p>
+				<h4>What information do we collect about you?</h4>
+				<p>
+					We collect information about you when you register membership of the Lodge or agree to become an Office Bearer. We also collect information when 
+					you voluntarily complete forms for the annual calendar, provide information for presentations by Provincial Office Bearers or the Grand Lodge of Scotland.  
+				</p>
+				<h4>How will we use the information about you?</h4>
+				<p>
+					We collect information about you to facilitate the administration of the lodge as membership details are necessary for this.  We use details to 
+					communicate with Lodge Members so that they are informed of events, meetings and news.
+				</p>
+				<p>
+					Where it is necessary for the effective administration of the Craft,  we shall pass on your personal information to the Provincial Grand Lodge 
+					of Glasgow and/or the Grand Lodge of Scotland.
+				</p>
+				<p>
+					Lodge Eastmuir will not share your information for marketing purposes with any other organisations.  Where personal information is requested for 
+					law enforcement purposes and accompanied by the appropriate paperwork we will share what is necessary for the prevention and detection of crime.
+				</p>
+				<h4>What is our lawful basis for processing personal data?</h4>
+				<p>
+					Our lawful basis for processing personal data is legitimate interests as defined in Article 6(1)(f) of the GDPR.  The legitimate interests pursued 
+					by us are the effective administration and governance of Freemasonry for members of Lodge Eastmuir.
+				</p>
+				<h4>Access to your information and correction</h4>
+				<p>
+					You have the right to request a copy of the information that we hold about you. If you would like a copy of some or all of your personal information, 
+					please email or write to the Lodge Secretary at the addresses provided below. We want to make sure that your personal information is accurate and up 
+					to date. You may ask us to correct or delete information you think is inaccurate.
+				</p>
+				<h4>Cookies</h4>
+				<p>
+					Cookies are text files placed on your computer to collect standard internet log information and visitor behaviour information. This information is used 
+					to track visitor use of the website and to compile statistical reports on website activity. We do not store any private information from cookies. 
+					For further information visit www.aboutcookies.org or www.allaboutcookies.org.
+				</p>
+				<p>
+					You can set your browser not to accept cookies and the above websites tell you how to remove cookies from your browser. However in a few cases some 
+					of our website features may not function as a result.
+				</p>
+				<h4>Other websites</h4>
+				<p>
+					Our website may contain links to other websites. This privacy policy only applies to this website so when you link to other websites you should 
+					read their own privacy policies.
+				</p>
+				<h4>Changes to our privacy policy</h4>
+				<p>
+					We keep our privacy policy under regular review and we will place any updates on this web page. This privacy policy was last updated on 15 May 2018.
+				</p>
+				<h4>How to contact us</h4>
+				<p>Please contact us if you have any questions about our privacy policy or information we hold about you:</p>
+				<p>
+					Lodge Eastmuir
+					<br/>1543 Shettleston Road	
+					<br/>Glasgow
+					<br/>G32 9AS
+				</p>
+				<p>eastmuirsecy1126@gmail.com</p>
 			</div>
 		</section>
 
