Updated Links list

--- a/index.html
+++ b/index.html
@@ -525,56 +525,46 @@
 
 		<section id="links" class="wrapper style1 special">
 			<h2>Links</h2>
-			<table style="text-align: center;">
+			<table>
 				<tr style="vertical-align: middle;">
 					<td style="vertical-align: middle;"><img src="images/GrandLodge.png" alt=""/></td>
-					<td style="vertical-align: middle;">Grand Lodge of Scotland</td>
-					<td style="vertical-align: middle;"><a href="http://www.grandlodgescotland.com/">http://www.grandlodgescotland.com/</a></td>
+					<td style="vertical-align: middle; text-align: left;"><a href="http://www.grandlodgescotland.com/">Grand Lodge of Scotland</a></td>
 				</tr>
 				<tr>
 					<td style="vertical-align: middle;"><img src="images/ProvincialGrandLodge.jpg" alt=""/></td>
-					<td style="vertical-align: middle;">Provincial Grand Lodge of Glasgow</td>
-					<td style="vertical-align: middle;"><a href="http://www.pglglasgow.org.uk/">http://www.pglglasgow.org.uk/</a></td>
+					<td style="vertical-align: middle; text-align: left;"><a href="http://www.pglglasgow.org.uk/">Provincial Grand Lodge of Glasgow</a></td>
 				</tr>
 				<tr>
 					<td style="vertical-align: middle;"></td>
-					<td style="vertical-align: middle;">Lodge Scotia Glasgow No. 178</td>
-					<td style="vertical-align: middle;"><a href="http://www.lodgescotia178.co.uk/">http://www.lodgescotia178.co.uk/</a></td>
+					<td style="vertical-align: middle; text-align: left;"><a href="http://www.lodgescotia178.co.uk/">Lodge Scotia Glasgow No. 178</a></td>
 				</tr>
 				<tr>
 					<td style="vertical-align: middle;"></td>
-					<td style="vertical-align: middle;">Lodge Robert Burns No. 440</td>
-					<td style="vertical-align: middle;"><a href="http://www.lrb440.co.uk/">http://www.lrb440.co.uk/</a></td>
+					<td style="vertical-align: middle; text-align: left;"><a href="http://www.lrb440.co.uk/">Lodge Robert Burns No. 440</a></td>
 				</tr>
 				<tr>
 					<td style="vertical-align: middle;"></td>
-					<td style="vertical-align: middle;">Lodge St, Bryde No. 579</td>
-					<td style="vertical-align: middle;"><a href="http://www.stbryde579.co.uk/">http://www.stbryde579.co.uk/</a></td>
+					<td style="vertical-align: middle; text-align: left;"><a href="http://www.stbryde579.co.uk/">Lodge St, Bryde No. 579</a></td>
 				</tr>
 				<tr>
 					<td style="vertical-align: middle;"></td>
-					<td style="vertical-align: middle;">Lodge Blantyre Kilwinning 557</td>
-					<td style="vertical-align: middle;"><a href="lodgeblantyrekilwinning557.com/">lodgeblantyrekilwinning557.com/</a></td>
+					<td style="vertical-align: middle; text-align: left;"><a href="lodgeblantyrekilwinning557.com/">Lodge Blantyre Kilwinning 557</a></td>
 				</tr>
 				<tr>
 					<td style="vertical-align: middle;"></td>
-					<td style="vertical-align: middle;">Caledonia Railway Lodge No. 354</td>
-					<td style="vertical-align: middle;"><a href="s552960452.websitehome.co.uk/">s552960452.websitehome.co.uk/</a></td>
+					<td style="vertical-align: middle; text-align: left;"><a href="s552960452.websitehome.co.uk/">Caledonia Railway Lodge No. 354</a></td>
 				</tr>
 				<tr>
 					<td style="vertical-align: middle;"></td>
-					<td style="vertical-align: middle;">Unity Lodge Brampton No. 710 (Canada)</td>
-					<td style="vertical-align: middle;"><a href="unitylodge.ca/main/">unitylodge.ca/main/</a></td>
+					<td style="vertical-align: middle; text-align: left;"><a href="unitylodge.ca/main/">Unity Lodge Brampton No. 710 (Canada)</a></td>
 				</tr>
 				<tr>
 					<td style="vertical-align: middle;"></td>
-					<td style="vertical-align: middle;">Provincial Grand Royal Arch	Chapter of Glasgow</td>
-					<td style="vertical-align: middle;"><a href="pgracglasgow.co.uk/">pgracglasgow.co.uk/</a></td>
+					<td style="vertical-align: middle; text-align: left;"><a href="pgracglasgow.co.uk/">Provincial Grand Royal Arch	Chapter of Glasgow</a></td>
 				</tr>
 				<tr>
 					<td style="vertical-align: middle;"></td>
-					<td style="vertical-align: middle;">Great Priory of Scotland</td>
-					<td style="vertical-align: middle;"><a href="greatprioryofscotland.co.uk">greatprioryofscotland.co.uk</a></td>
+					<td style="vertical-align: middle; text-align: left;"><a href="greatprioryofscotland.co.uk">Great Priory of Scotland</a></td>
 				</tr>
 			</table>
 		</section>
